Fixed Behind the Photo Color Box
Added a box shadow

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,10 +40,6 @@ footer {
   padding: 50px;
 }
 
-.my-navbar {
-  color: rgb(104, 101, 101);
-}
-
 .main-name {
   color: var(--secondary-color);
 }
@@ -69,10 +65,7 @@ footer {
   height: 450px;
   left: 658px;
   top: 140px;
-}
-
-.float-left {
-  float: left !important;
+  box-shadow: 60px -56px #8db4ad;
 }
 
 .double-border {
@@ -176,19 +169,4 @@ footer {
     padding: 0;
     text-align: center;
   }
-}
-
-.under {
-  padding: 45%;
-  border: #8db4ad;
-  border-radius: 5px;
-  background-color: #d2d2d2;
-  position: absolute;
-  top: 30px;
-  margin-top: 80px;
-  right: 90px;
-  padding: 250px;
-  width: 435px;
-  height: 450px;
-  max-width: 250px;
 }
